--- a/examples/prompt_experiments_tutorial.ipynb
+++ b/examples/prompt_experiments_tutorial.ipynb
@@ -18,7 +18,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    " **Why evaluate prompts**: LLM outputs are highly sensitive to the prompt provided. Trivial changes to the prompt such as assigning a personality to the LLM by prefixing the prompt with \"Imagine you are a CEO/Writer/Scientist etc.\" can generate widely different responses. This difference impacts the overall application's performance, making it crucial to test multiple prompts over cases to find the one best suited for the application."
+    "**Why evaluate prompts**: LLM outputs are highly sensitive to the prompt provided. Trivial changes to the prompt such as assigning a personality to the LLM by prefixing the prompt with \"Imagine you are a CEO/Writer/Scientist etc.\" can generate widely different responses. This difference impacts the overall application's performance, making it crucial to test multiple prompts over cases to find the one best suited for the application."
    ]
   },
   {
@@ -85,7 +85,7 @@
    },
    "outputs": [],
    "source": [
-    "# os.environ['OPENAI_API_KEY'] = \"...\""
+    "# os.environ[\"OPENAI_API_KEY\"] = \"...\""
    ]
   },
   {
