--- a/examples/prompt_experiments_tutorial.ipynb
+++ b/examples/prompt_experiments_tutorial.ipynb
@@ -18,7 +18,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Why evaluate prompts**: LLM outputs are highly sensitive to the prompt provided. Trivial changes to the prompt such as assigning a personality to the LLM by prefixing the prompt with \"Imagine you are a CEO/Writer/Scientist etc.\" can generate widely different responses. This difference impacts the overall application's performance, making it crucial to test multiple prompts over cases to find the one best suited for the application."
+    "**Why Evaluate Prompts**: LLM outputs are highly sensitive to the prompt provided. Trivial changes to the prompt such as assigning a personality to the LLM by prefixing the prompt with \"Imagine you are a CEO/Writer/Scientist etc.\" can generate widely different responses. This difference impacts the overall application's performance, making it crucial to test multiple prompts over cases to find the one best suited for the application."
    ]
   },
   {
@@ -38,7 +38,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Solution**: In the given tutorial, we consider a prompt template with LLM_PERSONALITY as a variable and using the experimentation framework to find the best personality to fill in. We demonstrate how to use the Uptrain framework to first obtain output responses for a test set of queries. We then evaluate the quality of the responses on some specified metrics."
+    "**Solution**: In the given tutorial, we consider a prompt template with LLM_PERSONALITY as a variable and use the experimentation framework to find the best personality to fill in. We demonstrate how to use the Uptrain framework to first obtain output responses for a test set of queries. We then evaluate the quality of the responses on some specified metrics."
    ]
   },
   {
@@ -122,14 +122,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As we see from above prompt, we have an additional variable in our prompt called \"LLM_PERSONALITY\". We want to experiment with multiple personalities like **(\"bot\", \"backend developer\", \"python expert\")** and check which of the three gives the most appropriate response."
+    "As we see from the above prompt, we have an additional variable in our prompt called \"LLM_PERSONALITY\". We want to experiment with multiple personalities like **(\"bot\", \"backend developer\", \"python expert\")** and check which of the three gives the most appropriate response."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Just for clarity, let's see how these prompts look like:"
+    "Just for clarity, let's see what these prompts look like:"
    ]
   },
   {
@@ -234,7 +234,7 @@
    "source": [
     "We start by configuring UpTrain to run our experiment. We will be using OpenAI's GPT-3.5-Turbo as our LLM. \n",
     "\n",
-    "Let's define an UpTrain 'Settings' object which has the directory location where we want to save the results of this experiment. Note that you must have `OPENAI_API_KEY` specified in your env variables or specify it explicitiy in the `Settings` object. "
+    "Let's define an UpTrain 'Settings' object which has the directory location where we want to save the results of this experiment. Note that you must have `OPENAI_API_KEY` specified in your env variables or specify it explicitly in the `Settings` object. "
    ]
   },
   {
@@ -301,10 +301,11 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To create multiple prompts from te same prompt template, UpTrain provides a PromptExperiment class where one can define their prompt template, multiple parameters to generate different prompt variations and the LLM model to be used. "
+    "To create multiple prompts from the same prompt template, UpTrain provides a PromptExperiment class where one can define their prompt template, multiple parameters to generate different prompt variations and the LLM model to be used. "
    ]
   },
   {
@@ -342,7 +343,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now we run the `CheckSet` and see which prompts performs best."
+    "Now we run the `CheckSet` and see which prompts perform best."
    ]
   },
   {
@@ -396,7 +397,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "UpTrain offers pivoting options for table. Here, we use this to find out which of the three personalities has the highest overlap scores."
+    "UpTrain offers pivoting options for tables. Here, we use this to find out which of the three personalities has the highest overlap scores."
    ]
   },
   {
