--- a/docs/getting-started/quickstart.mdx
+++ b/docs/getting-started/quickstart.mdx
@@ -125,4 +125,4 @@ This will open a new tab in your browser with the UpTrain dashboard. You can vie
 
 Here is a screenshot of the dashboard:
 
-![dashboard.png]()
+![dashboard.png](https://github.com/uptrain-ai/uptrain/assets/43818888/dc2c1f2d-5e68-4cf9-b36f-30bd13c5fa64)
