--- a/examples/validation_tutorial.ipynb
+++ b/examples/validation_tutorial.ipynb
@@ -157,10 +157,11 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let’s now get responses from our LLM by defining our completion function. \n",
+    "Let's now get responses from our LLM by defining our completion function. \n",
     "We are using GPT-3.5-Turbo for the same"
    ]
   },
